@@ -10,6 +10,7 @@ CHANGELOG Roundcube Webmail
 - Support LDAP GSSAPI authentication (#5703)
 - Allow contacts without an email address (#5079)
 - Localized timezone selector (#4983)
+- Fix various issues when downloading files with names containing non-ascii chars, use RFC 2231 (#5772)
 - Update to TinyMCE 4.5.7
 - Fix bug where invalid recipients could be silently discarded (#5739)
 - Fix conflict with _gid cookie of Google Analytics (#5748)
